--- a/form.html
+++ b/form.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="form.css" />
-    <link rel="index" href="index.html" />
+    <link rel="stylesheet" href="style.css" />
     <script href="form.js"></script>
   </head>
 
   <body class="main-content">
-    <nav><a href="index.html">Home</a></nav>
     <h1 class="H1">Sakura's Mystery S2 Community Realm For Tnc-Cuban</h1>
-    <p></p>
+    <div>
+      <a href="index.html">Home</a><br />
+      <a href="t-c.html">T&C of TNC Cuban Realm and Discord</a><br />
+    </div>
     <form id="f1" action="/action_page.php">
       <label for="Dname">What is your User Name for Discord:</label><br />
       <input type="text" id="Dname" name="Dname" value="" /><br />
