--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div>
           <nav>
             <ul>
-              <li><a href="//html/Form.html">Realm form</a></li>
+              <li><a href="Form.html">Realm form</a></li>
               <li>
-                <a href="//html/terms&conditions.html">terms and conditions</a>
+                <a href="terms&conditions.html">terms and conditions</a>
               </li>
-              <li><a href="//html/Suggestion.html">Suggestion page</a></li>
+              <li><a href="Suggestion.html">Suggestion page</a></li>
             </ul>
           </nav>
         </div>
