--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
       <link rel="stylesheet" href="/css/style.css" />
     </head>
     <body class="main-content">
-      <header>
-        <div>
-          <nav>
-            <ul>
-              <li><a href="Form.html">Realm form</a></li>
-              <li>
-                <a href="terms&conditions.html">terms and conditions</a>
-              </li>
-              <li><a href="Suggestion.html">Suggestion page</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
+   <header>
+      <div>
+        <nav>
+          <ul>
+            <li><a href="index.html">home page</a></li>
+            <li><a href="/html/Form.html">Realm form</a></li>
+            <li>
+              <a href="/html/terms&conditions.html">terms and conditions</a>
+            </li>
+            <li><a href="/html/Suggestion.html">Suggestion page</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
       <h1 class="H1">Welcome to the official Web page for TNC Cuban</h1>
       <picture id="log">
         <img src="/images/logo.jpeg" width="50%" height="50%" />
