--- a/html/sorry.html
+++ b/html/sorry.html
@@ -11,7 +11,7 @@
       <div>
         <nav>
           <ul>
-            <li><a href="index.html">home page</a></li>
+            <li><a href="/html/index.html">home page</a></li>
             <li><a href="/html/Form.html">Realm form</a></li>
             <li>
               <a href="/html/terms&conditions.html">terms and conditions</a>
