--- a/html/terms&conditions.html
+++ b/html/terms&conditions.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="/css/style.css"/>
   </head>
   <header>
-    <div>
-      <nav>
-        <ul>
-          <li><a href="index.html">home page</a></li>
-          <li><a href="/html/Form.html">Realm form</a></li>
-          <li>
-            <a href="/html/terms&conditions.html">terms and conditions</a>
-          </li>
-          <li><a href="/html/Suggestion.html">Suggestion page</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+      <div>
+        <nav>
+          <ul>
+            <li><a href="/html/index.html">home page</a></li>
+            <li><a href="/html/Form.html">Realm form</a></li>
+            <li>
+              <a href="/html/terms&conditions.html">terms and conditions</a>
+            </li>
+            <li><a href="/html/Suggestion.html">Suggestion page</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   <body class="main-content">
     <h1 class="H1">terms and conditions of TNC Cuban Realm and Discord</h1>
     
