--- a/Suggestion.html
+++ b/Suggestion.html
@@ -32,7 +32,7 @@
     <br /><br />
     <textarea
       id="text"
-      placeholder="Please enter your suggestion's here"
+      placeholder="Please enter your suggestions here"
       required
     ></textarea>
 
