--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -62,8 +62,7 @@ Like in all Ninja Training we do expect that you follow the Ninja Code to ensure
     <li>Reduce the amount of background noise, if possible. Resort to push to talk in your settings to reduce the issue.</li><br>
 </ol>
 <p class="p">
-NOTE Rules are Subject to change without notice and could result in 
-
+NOTE Rules are Subject to change without notice and could result in a ban and 
 if you are   it is permanent and the decision is final
     </p><br>
 
