--- a/Suggestion.html
+++ b/Suggestion.html
@@ -30,12 +30,15 @@
       the idea
     </p>
     <br /><br />
+    <dive class="center">
     <textarea
+    class="center"
       id="text"
-      placeholder="Please enter your suggestions here"
+      placeholder="Please enter your suggestion's here"
       required
     ></textarea>
-
+  </dive>
+    
     <div id="div1"><input type="submit" /></div>
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     <footer>
