--- a/Suggestion.html
+++ b/Suggestion.html
@@ -11,8 +11,12 @@
       <div>
         <nav>
           <ul>
-            <li><a href="index.html">home page</a></li>
-            <li><a href="Form.html">Realm form</a></li>
+            <li>
+              <a href="index.html">home page</a>
+            </li>
+            <li>
+              <a href="Form.html">Realm form</a>
+            </li>
             <li>
               <a href="terms&conditions.html">terms and conditions</a>
             </li>
