--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <th>Sunday</th>
         </tr>
         <tr>
-          <td>YouTube stream</td>
+          <td>Twitch stream</td>
           <td>Twitch stream</td>
           <td>YouTube video</td>
         </tr>
